make develop branch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
        
         <div class="box">
-            <div class="open"></div>
+            <div>디벨로퍼</div>
         </div>
     
     </body>
